tests/assembler/good/astral.j
.class "astralğŸ’©x"
.super java/lang/Object
.end class
