tests/assembler/bad/named_record_in_record.j
.class public super test
.super java/lang/Object

.record
    a I .attributes
        .attribute Record .record
            a I .attributes
            .end attributes
        .end record
    .end attributes
.end record
